# epitech-nanotekspice

./: CMakeLists.txt  README.md
assets/: example.nts
bonus/ram_generator/: data.py  main.py
bonus/ram_generator/elements/: basic_logic.py  decoder.py  ram.py  utils.py
bonus/ram_generator/output_files/: 3_and_GEN.nts  ram_GEN.nts
circuits/: 1bit_counter.nts  32bits_adder.nts  3_to_8_decoder.nts  4001.nts  4008.nts  4011.nts  4013.nts  4030.nts  4040.nts  4069.nts  4071.nts  4081.nts  4094.nts  4512.nts  4514.nts  4514_latches.nts  4_and.nts  4_to_16_decoder.nts  8_or.nts  8_or_GEN.nts  8bits_adder.nts  GEN_decoder_3_to_8.nts  byte_oe.nts  d_flip_flop.nts  full_adder.nts  half_adder.nts  inverse_tri_state.nts  nand.nts  nor.nts  ram_byte.nts  rs_flip_flop.nts  tri_and.nts  tri_nand.nts  tri_state.nts
include/: Enums.hpp  Errors.hpp  IComponent.hpp  Simulator.hpp
include/circuit/: Circuit.hpp  CircuitGenerator.hpp
include/components/: AComponent.hpp  IOComponent.hpp  Pin.hpp
include/components/advanced/: JohnsonComponent.hpp  RomComponent.hpp
include/components/elementary/: AndComponent.hpp  InhibitComponent.hpp  LogicComponent.hpp  NotComponent.hpp  OrComponent.hpp  XorComponent.hpp
include/components/special/: ClockComponent.hpp  FalseComponent.hpp  InputComponent.hpp  LoggerComponent.hpp  OutputComponent.hpp  TrueComponent.hpp
include/parser/: ParseUtils.hpp  Parser.hpp
src/: Errors.cpp  Simulator.cpp  main.cpp
src/circuit/: Circuit.cpp  CircuitGenerator.cpp
src/components/: AComponent.cpp  IOComponent.cpp  Pin.cpp
src/components/advanced/: JohnsonComponent.cpp  RomComponent.cpp
src/components/elementary/: AndComponent.cpp  InhibitComponent.cpp  LogicComponent.cpp  NotComponent.cpp  OrComponent.cpp  XorComponent.cpp
src/components/special/: ClockComponent.cpp  FalseComponent.cpp  InputComponent.cpp  LoggerComponent.cpp  OutputComponent.cpp  TrueComponent.cpp
src/parser/: ParseUtils.cpp  Parser.cpp
